--- a/assets/css/home-page-styles.css
+++ b/assets/css/home-page-styles.css
@@ -7,7 +7,7 @@ body {
 
 body::before {
   content: "";
-  background-image: url(/assets/images/spider-man-background.jpg);
+  background-image: url("/assets/images/spider-man-background.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -49,7 +49,7 @@ body::before {
   width: calc(100% / 3 - 8%);
   height: 70vh;
   position: relative;
-  transition: 0.5s ease-in-out;
+  transition: filter 0.5s ease-in-out;
 }
 
 .s-card__background {
@@ -132,15 +132,15 @@ body::before {
 }
 
 body#spider-man-01-hovered::before {
-  background-image: url(/assets/images/pic-sm-bg-01.jpg);
+  background-image: url("/assets/images/pic-sm-bg-01.jpg");
 }
 
 body#spider-man-02-hovered::before {
-  background-image: url(/assets/images/pic-sm-bg-02.jpg);
+  background-image: url("/assets/images/pic-sm-bg-02.jpg");
 }
 
 body#spider-man-03-hovered::before {
-  background-image: url(/assets/images/pic-sm-bg-03.jpg);
+  background-image: url("/assets/images/pic-sm-bg-03.jpg");
 }
 
 body[id^="spider-man-"]::before {
